fixed missing dependency
git-svn-id: http://not-naughty.rubyforge.org/svn/trunk@11 237cfc11-8a1d-4059-97b5-5b2ef5dd0725

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.5.1 (2008-03-17)
+* fixed missing dependency
+
 === 0.5 (2008-03-17)
 * added an error handler, can now handle SQL validation errors
 * renamed Errors to Violation and merged it with ValidationException
